fix spacing with the main container

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button {
 }
 
 .container {
-  padding: 12vh 0;
+  padding: 5vh 0;
 }
 
 .calculator {
